--- a/frontend/src/ui-kit.css
+++ b/frontend/src/ui-kit.css
@@ -18,7 +18,6 @@
 .color-red {
   background: var(--color-red);
 }
-
 .color-red-dark {
   background: var(--color-red-dark);
 }
@@ -52,8 +51,8 @@
   margin-left: 1em;
 }
 
-.button--accent1 { background: #39A0FF; border: 1px solid #39A0FF; }
-.button--accent2 { background: #73C376; border: 1px solid #73C376; }
+.button--accent1 { background: var(--color-blue); border: 1px solid var(--color-blue); }
+.button--accent2 { background: var(--color-green); border: 1px solid var(--color-green); }
 .button--dark    { background: #000000; border: 1px solid #000000; }
 .button--white   { background: #ffffff; border: 1px solid #545454; color: #000; }
 
@@ -163,7 +162,7 @@
   padding-top: 2px;
 }
 .text-field.text-field--error .input-box {
-  border-color: #EB5757;
+  border-color: var(--color-red);
   border-bottom-width: 2px;
   padding-top: 2px;
 }
@@ -219,7 +218,7 @@
   font-size: 12px;
   font-weight: 500;
   letter-spacing: .5px;
-  color: #EB5757;
+  color: var(--color-red);
   line-height: 135%;
 }
 
@@ -303,12 +302,12 @@
   width: fit-content;
 }
 .card-sm .info-panel .info .label--passed {
-  background: #73C376;
-  border-left: 4px solid #359539;
+  background: var(--color-green);
+  border-left: 4px solid var(--color-green-dark);
 }
 .card-sm .info-panel .info .label--failed {
-  background: #EB5757;
-  border-left: 4px solid #A93434;
+  background: var(--color-red);
+  border-left: 4px solid var(--color-red-dark);
 }
 .card-sm .info-panel .info .description {
   font-size: 12px;
@@ -376,10 +375,10 @@
   box-shadow: 0 20px 50px 0 rgba(0,0,0,.25);
 }
 .card-md .image--passed {
-  border-bottom: 3px solid #73C376;
+  border-bottom: 3px solid var(--color-green);
 }
 .card-md .image--failed {
-  border-bottom: 3px solid #A93434;
+  border-bottom: 3px solid var(--color-red-dark);
 }
 .card-md .image img {
   object-fit: cover;
@@ -432,10 +431,10 @@
 }
 .card-md .header .right {
   font-size: 10px;
-  color: #73C376;
+  color: var(--color-green);
 }
 .card-md .header .right .failed {
-  color: #EB5757;
+  color: var(--color-red);
 }
 
 .card-lg {
@@ -513,12 +512,12 @@
   width: fit-content;
 }
 .card-lg .info-panel .left .label--passed {
-  background: #73C376;
-  border-left: 4px solid #359539;
+  background: var(--color-green);
+  border-left: 4px solid var(--color-green-dark);
 }
 .card-lg .info-panel .left .label--failed {
-  background: #EB5757;
-  border-left: 4px solid #A93434;
+  background: var(--color-red);
+  border-left: 4px solid var(--color-red-dark);
 }
 .card-lg .info-panel .right .card-button {
   background: #8AC1F4;
@@ -546,7 +545,7 @@
   color: #89CB8C;
 }
 .status-cell .status-icon--failed {
-  color: #EB5757;
+  color: var(--color-red);
 }
 .status-cell .status-icon--approved {
   color: #000000;
