UI Kit: widget-label angular component added

--- a/frontend/src/app/ui-kit/card-sm/card-sm.component.html
+++ b/frontend/src/app/ui-kit/card-sm/card-sm.component.html
@@ -14,7 +14,7 @@
       </div>
     </div>
     <div class="actions">
-      <span (click)="clickRun.emit(itemId)">Play <i class="fas fa-play"></i></span>
+      <span (click)="clickRun.emit(itemId)">Run <i class="fas fa-play"></i></span>
       <span (click)="clickHistory.emit(itemId)">Latest results</span>
     </div>
   </div>
