--- a/frontend/src/app/ui-kit/preview/ui-kit-preview.component.html
+++ b/frontend/src/app/ui-kit/preview/ui-kit-preview.component.html
@@ -14,6 +14,30 @@
 <span class="color-red-dark">.color-red-dark</span>
 </div>
 
+
+<h1>Labels</h1>
+
+<div class="container-500">
+
+  <div class="widget-label widget-label--xl">
+
+    <h2 class="header">All Test Scenarios</h2>
+    <div class="state state--passed">Passed</div>
+    <div class="stats">
+      <div class="stats-left">
+        <em>72</em> Scenarios <br>
+        <em>3</em> Viewports
+      </div>
+      <div class="stats-right">
+        <em>Last Run</em><br>
+        2h 36min ago
+      </div>
+    </div>
+
+  </div>
+
+</div>
+
 <h1>Buttons</h1>
 <button class="button button--dark">Dark</button>
 <button class="button button--white">White</button>
