--- a/frontend/src/app/view/overview/overview.component.html
+++ b/frontend/src/app/view/overview/overview.component.html
@@ -70,7 +70,14 @@
     </div>
 
   </div>
-  <div class="widgets-right-placeholder">right</div>
+
+  <div class="widgets-right-placeholder">
+
+    <div class="widget widget-run widget--green">
+
+    </div>
+
+  </div>
 
 
   <div class="cards-placeholder">
