--- a/frontend/src/app/view/scenarios/scenarios.component.html
+++ b/frontend/src/app/view/scenarios/scenarios.component.html
@@ -1,14 +1,19 @@
 <app-sidebar-page-layout
   [title]="'Test Scenarios'"
   [description]="'Each scenario will test one page, component or action against one or many viewport sizes'"
-
 >
 
   <div class="page-actions-placeholder">
     <ul class="page-actions">
-      <li class="title-actions-item">Page action 1</li>
-      <li class="title-actions-item">Page action 2</li>
-      <li class="title-actions-item">Page action 3</li>
+      <li class="title-actions-item">
+        <button class="button button--white">Remove Filtered</button>
+       </li>
+      <li class="title-actions-item">
+        <button class="button button--white">Run Filtered</button>
+      </li>
+      <li class="title-actions-item">
+        <button class="button button--dark">Add New Scenario</button>
+      </li>
     </ul>
   </div>
 
