--- a/frontend/src/ui-kit.css
+++ b/frontend/src/ui-kit.css
@@ -28,15 +28,19 @@
   border-radius: 50px;
   border: none;
   min-height: 40px;
-  padding: 0px 1.25em 0px 1.25em;
+  padding: 0 1.5em 0 1.5em;
   font-size: 100%;
   font-family: 'Ubuntu', sans-serif;
   font-weight: 400;
   color: #ffffff;
   cursor: pointer;
   position: relative;
-  box-shadow: 0px 15px 20px 0 #0000002e, 0px 5px 10px 0 #00000010;
+  box-shadow: 0 15px 20px 0 #0000002e, 0 5px 10px 0 #00000010;
   white-space: nowrap;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 .button:focus {
   outline: none;
@@ -800,23 +804,36 @@
   border-top: 3px solid #47A066;
 }
 
+.widget-run {
+  width: 311px;
+  height: 416px;
+  border-radius: 16px;
+}
+
 
 /* LABELS */
 
 .widget-label {}
-.widget-label--xl {}
-.widget-label .header {
+.widget-label--xl .header {
   margin-bottom: 8px;
+  font-size: 24px;
+  margin-top: 0;
 }
 .widget-label .state {
-  font-size: 80px;
-  font-weight: bold;
   color: #ffffff;
-  border-radius: 8px;
-  padding: 8px 36px;
-  _width: fit-content;
   text-align: center;
+
+}
+.widget-label--xl .state {
+  font-size: 7.4vh;
+  font-weight: bold;
   margin-bottom: 36px;
+  border-radius: 8px;
+  padding: 8px 1.875vw;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 .widget-label .state--passed {
   background: var(--color-green);
