UI Kit: scenarios markup and styles...

--- a/frontend/src/app/layouts/sidebar-page-layout/sidebar-page-layout.component.html
+++ b/frontend/src/app/layouts/sidebar-page-layout/sidebar-page-layout.component.html
@@ -2,9 +2,9 @@
   <div class="app-content">
 
     <div class="title-row">
-      <h1 class="title-header">{{ title }}</h1> <ng-content select=".page-actions-placeholder"></ng-content>
+      <h1 class="page-header">{{ title }}</h1> <ng-content select=".page-actions-placeholder"></ng-content>
     </div>
-    <div class="description">
+    <div class="page-description">
       {{ description }}
     </div>
 
