--- a/frontend/src/app/ui-kit/widget-run/widget-run.component.html
+++ b/frontend/src/app/ui-kit/widget-run/widget-run.component.html
@@ -6,7 +6,7 @@
 
     <app-text-field
       [label]="'Scenarios filter'"
-      [tooltip]="'* support wildcards'"
+      [tooltip]="''"
       [placeholder]="'some-label*'"
       (valueChanged)="scenariosFilterChanged($event)"
     >
