--- a/frontend/src/ui-kit.css
+++ b/frontend/src/ui-kit.css
@@ -121,6 +121,7 @@
   font-weight: 500;
   color: #000000;
 }
+
 .sidebar-header {
   border-bottom: 1px solid #D1D1D1;
   text-align: right;
@@ -144,6 +145,21 @@
 }
 .sidebar-header span + span {
   margin-left: 32px;
+}
+
+.filter-header {
+  font-size: 24px;
+  font-weight: 500;
+  font-family: 'Ubuntu', sans-serif;
+}
+.filter-subheader {
+  font-size: 14px;
+  font-weight: 500;
+  font-family: 'Ubuntu', sans-serif;
+  color: #3A3A3A;
+  margin-top: 24px;
+  margin-bottom: 0;
+  padding: 0;
 }
 
 /* INPUTS */
@@ -285,6 +301,14 @@
   line-height: 135%;
 }
 
+.checkbox-field {
+  font-family: 'Ubuntu', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 200%;
+  margin-bottom: 12px;
+}
 
 /* CHECKBOXES */
 
@@ -877,6 +901,16 @@
   border-radius: 4px;
   box-shadow: inset 0px 4px 10px rgba(0, 0, 0, 0.25);
 }
+.widget-run .run-form .actions {
+  flex: 1;
+  display: flex;
+  align-items: flex-end;
+  justify-content: flex-end;
+}
+
+
+/* VIEWPORTS SELECTOR */
+
 .viewports-selector-header {
   font-weight: 500;
   font-size: 16px;
@@ -896,8 +930,18 @@
   padding: 3px 6px;
   cursor: pointer;
   opacity: .3;
-  transition: opacity .2s ease-in-out;
+  transition: opacity .2s ease-in-out, background-color .2s ease-in-out;
+
   margin-left: 4px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+.viewports-selector .viewport-toggle--on {
+  opacity: 1;
+  color: #414141;
+  font-weight: 500;
 }
 .viewports-selector .viewport-toggle:hover {
   opacity: .6;
@@ -905,16 +949,21 @@
 .viewports-selector .viewport-toggle--on:hover  {
   opacity: .85;
 }
-.viewports-selector .viewport-toggle--on {
+
+
+.sidebar-placeholder .viewports-selector .viewport-toggle {
+  font-size: 16px;
+  font-weight: normal;
+  background: #E2E2E2;
+  color: #3A3A3A;
+  padding: 9px 12px;
+  line-height: 300%;
+  margin-right: 16px;
+  margin-left: 0;
   opacity: 1;
-  color: #414141;
-  font-weight: 500;
 }
-.widget-run .run-form .actions {
-  flex: 1;
-  display: flex;
-  align-items: flex-end;
-  justify-content: flex-end;
+.sidebar-placeholder .viewports-selector .viewport-toggle--on {
+  background: var(--color-blue);
 }
 
 /* LABELS */
