UI Kit: scenarios markup and styles... (toggles markup and styles)

--- a/frontend/src/app/view/scenarios/scenarios.component.html
+++ b/frontend/src/app/view/scenarios/scenarios.component.html
@@ -65,13 +65,15 @@
       <h3 class="filter-header">Filter by Status</h3>
 
       <div class="checkbox-field">
-        <input type="checkbox" name="">
-        <label>Passed in the last run</label>
+        <input type="checkbox" name="checkbox1" id="checkbox1">
+        <label for="checkbox1"></label>
+        <span>Passed in the last run</span>
       </div>
 
       <div class="checkbox-field">
-        <input type="checkbox" name="" checked>
-        <label>Failed in the last run</label>
+        <input type="checkbox" name="" id="checkbox2">
+        <label for="checkbox2"></label>
+        <span>Failed in the last run</span>
       </div>
 
       <h3 class="filter-header">Filter by Viewport Size</h3>
