UI Kit: checkbox-field angular component added

--- a/frontend/src/app/ui-kit/preview/ui-kit-preview.component.html
+++ b/frontend/src/app/ui-kit/preview/ui-kit-preview.component.html
@@ -146,29 +146,18 @@ button.btn--accent2
 
 <h1>Checkboxes</h1>
 
-<div class="checkbox">
-  <input type="checkbox" id="checkbox1">
-  <label for="checkbox1">Checkbox1 label</label>
+<div class="checkbox-field">
+  <input type="checkbox" name="checkbox1" id="checkbox1">
+  <label for="checkbox1"></label>
+  <span>Passed in the last run</span>
 </div>
 
-<div class="checkbox">
-  <input type="checkbox" id="checkbox2" checked>
-  <label for="checkbox2">Checkbox2 label</label>
+<div class="checkbox-field">
+  <input type="checkbox" name="" id="checkbox2" checked>
+  <label for="checkbox2"></label>
+  <span>Failed in the last run</span>
 </div>
 
-<div class="switch">
-  <input type="checkbox" id="switch">
-  <label for="switch">Switch (enabled/disabled)</label>
-</div>
-
-<span class="toggle">
-  <input type="checkbox" id="toggle1">
-  <label for="toggle1">Val x Val</label>
-</span>
-<span class="toggle">
-  <input type="checkbox" id="toggle2">
-  <label for="toggle2">Toggle 2</label>
-</span>
 
 <h1>Cards</h1>
 
