--- a/frontend/src/app/view/scenarios/scenarios.component.html
+++ b/frontend/src/app/view/scenarios/scenarios.component.html
@@ -64,27 +64,33 @@
 
       <h3 class="filter-header">Filter by Status</h3>
 
-      <div class="checkbox-field">
-        <input type="checkbox" name="checkbox1" id="checkbox1">
-        <label for="checkbox1"></label>
-        <span>Passed in the last run</span>
-      </div>
+      <app-checkbox-field
+        [label]="'Passed in the last run'"
+        (changed)="testHandler($event)"
+      >
+      </app-checkbox-field>
 
-      <div class="checkbox-field">
-        <input type="checkbox" name="" id="checkbox2">
-        <label for="checkbox2"></label>
-        <span>Failed in the last run</span>
-      </div>
+      <app-checkbox-field
+        [label]="'Failed in the last run'"
+        [checked]="true"
+        (changed)="testHandler($event)"
+      >
+      </app-checkbox-field>
+
 
       <h3 class="filter-header">Filter by Viewport Size</h3>
       <h4 class="filter-subheader">Desktop</h4>
       <app-viewports-selector
-        [viewports]="['1920 × 1080', '1600 × 900', '1270 × 720', '1024 × 1366', '1024 × 768']">
+        [viewports]="['1920 × 1080', '1600 × 900', '1270 × 720', '1024 × 1366', '1024 × 768']"
+        (selectionChanged)="testHandler($event)"
+      >
       </app-viewports-selector>
 
       <h4 class="filter-subheader">Mobile</h4>
       <app-viewports-selector
-        [viewports]="['1920 × 1080', '1600 × 900', '1270 × 720', '1024 × 1366', '1024 × 768']">
+        [viewports]="['1920 × 1080', '1600 × 900', '1270 × 720', '1024 × 1366', '1024 × 768']"
+        (selectionChanged)="testHandler($event)"
+      >
       </app-viewports-selector>
 
 
